src/assets/main.css
@import './palette.css';

.material-symbols-outlined.md-18 { font-size: 18px; }
.material-symbols-outlined.md-24 { font-size: 24px; }
.material-symbols-outlined.md-36 { font-size: 36px; }
.material-symbols-outlined.md-48 { font-size: 48px; }


body {
    background-color: var(--background-color);
    margin: 0;
    height: 100vh;
    width: 100vw;
}

#app{
    height: 100vh;
    width: 100vw;
}

